swagger api some useless model (probably wont use it) started building a thread based connection to the server
